# delores

./: .gitignore  AUTHORS  BUGS  Makefile.am  NEWS  README  THANKS  TODO  WHATS_NEW.txt  configure.ac
bget/: bget.c
cgic106/: cgic.html  cgic.txt  license.txt  readme.txt
dl_cgi/: Makefile  credits.html  dl_cgi.c  dl_cgi.html
doc/: delores.1  delores.tex  manual.html  program.html
examples/: circle10000.dl  circle15000.dl  circle2000.dl  circle20000.dl  circle25000.dl  circle50.dl  circle500.dl  circle5000.dl
ohash/: hashtest.c  ohash.c  ohash.h
src/: Makefile  Makefile.am  bget.c  bget.h  cmd_line_args.h  cmd_line_args.l  dl.c  dl.h  dl.l  dl.y  dl_compile.h  dl_inline.h  dl_malloc.c  dl_malloc.h  dl_stdbool.h  dl_stdint.h  dl_strdup.c  dl_strdup.h  lexer.l  main.c  ohash.c  ohash.h  parser.y  primes.txt  timer.c  timer.h
www/: delores-0.90.tar.bz2  delores-0.91.tar.bz2  index.html  manual.html
