# $Id: Makefile.am,v 1.2 2003-12-13 19:54:00 psy Exp $
#
# Copyright (C) 2003 Tristan Miller <psychonaut@nothingisreal.com>
#  
# This file is free software; the author gives unlimited permission to
# copy and/or distribute it, with or without modifications.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even
# the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR
# PURPOSE.

AUTOMAKE_OPTIONS = dist-bzip2
man_MANS = doc/delores.1
EXTRA_DIST = BUGS TODO doc/program.html $(man_MANS)
SUBDIRS = src
