# $Id: Makefile.am,v 1.5 2003-12-14 14:47:34 psy Exp $
#
# Copyright (C) 2003 Tristan Miller <Tristan.Miller@dfki.de>
#  
# This file is free software; the author gives unlimited permission to
# copy and/or distribute it, with or without modifications.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even
# the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR
# PURPOSE.

AUTOMAKE_OPTIONS = dist-bzip2
man_MANS = doc/delores.1
EXTRA_DIST = BUGS TODO doc/delores.tex doc/delores.dvi doc/delores.pdf examples/circle50.dl examples/circle5000.dl examples/circle20000.dl examples/circle15000.dl examples/circle10000.dl examples/circle2000.dl examples/circle500.dl examples/circle25000.dl $(man_MANS)
SUBDIRS = src
