# $Id: Makefile.am,v 1.4 2003-12-11 19:51:33 psy Exp $
#
# Copyright (C) 1999, 2000 Michael Maher <mjm@math.luc.edu>
# Copyright (C) 1999, 2000, 2003 Tristan Miller <psychonaut@nothingisreal.com>
#  
# This file is free software; the author gives unlimited permission to
# copy and/or distribute it, with or without modifications.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even
# the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR
# PURPOSE.

bin_PROGRAMS = delores
delores_SOURCES = bget.c bget.h cmd_line_args.h cmd_line_args.l dl.c dl.h dl.l dl_malloc.c dl_malloc.h dl_stdbool.h dl_stdint.h dl_strdup.c dl_strdup.h dl.y main.c ohash.c ohash.h timer.c timer.h
